fixed card image position and size, footer display on mobile

--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,10 @@ main section .full-width {
   padding: 1.5rem;
 }
 
+.card img {
+  margin: 0 auto;
+}
+
 .card button {
   display: inline-block;
   border: none;
@@ -124,8 +128,9 @@ main section .full-width {
   color: white;
 }
 
-.card h2 {
+.card h3 {
   margin-bottom: 8px;
+  text-align: center;
 }
 
 .card p {
@@ -150,5 +155,8 @@ footer {
 @media (max-width: 600px) {
   footer {
     grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
